@@ -86,6 +86,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #7502: Fix equality comparison for DocTestCase instances.  Patch by
+  Cédric Krier.
+
 - Issue #11870: threading: Properly reinitialize threads internal locks and
   condition variables to avoid deadlocks in child processes.
 
